✨ 권한 그룹 생성 API 로직 개선